tests/algorithms/x/Scala/physics/ideal_gas_law.scala
// Generated by Mochi v0.10.62 on 2025-08-09 10:40:17 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
import scala.math.BigInt
import scala.collection.immutable.ListMap
object Main {
  private var _nowSeed: Long = 0L
  private var _nowSeeded: Boolean = false
  private def _now(): Int = {
    if (!_nowSeeded) {
      sys.env.get("MOCHI_NOW_SEED").foreach { s =>
      try { _nowSeed = s.toInt; _nowSeeded = true } catch { case _ : NumberFormatException => () }
    }
  }
  if (_nowSeeded) {
    _nowSeed = (_nowSeed * 1664525 + 1013904223) % 2147483647
    _nowSeed.toInt
  } else {
    Math.abs((System.nanoTime() / 1000).toInt)
  }
}

def toJson(value: Any, indent: Int = 0): String = value match {
  case m: scala.collection.Map[_, _] =>
  val items = ListMap(m.toSeq.sortBy(_._1.toString): _*).toSeq.map{ case (k,v) => "  "*(indent+1)+"\""+k.toString+"\": "+toJson(v, indent+1) }
  "{\n"+items.mkString(",\n")+"\n"+"  "*indent+"}"
  case s: Seq[_] =>
  val items = s.map(x => "  "*(indent+1)+toJson(x, indent+1))
  "[\n"+items.mkString(",\n")+"\n"+"  "*indent+"]"
  case s: String => "\""+s+"\""
  case other => other.toString
}

def pressure_of_gas_system(moles: Double, kelvin: Double, volume: Double): Double = {
  if (((moles < BigInt(0).toDouble || kelvin < BigInt(0).toDouble).asInstanceOf[Boolean] || volume < BigInt(0).toDouble).asInstanceOf[Boolean]) {
    throw
    "Invalid inputs. Enter positive value."
  }
  return moles * kelvin * UNIVERSAL_GAS_CONSTANT / volume
}

def volume_of_gas_system(moles: Double, kelvin: Double, pressure: Double): Double = {
  if (((moles < BigInt(0).toDouble || kelvin < BigInt(0).toDouble).asInstanceOf[Boolean] || pressure < BigInt(0).toDouble).asInstanceOf[Boolean]) {
    throw
    "Invalid inputs. Enter positive value."
  }
  return moles * kelvin * UNIVERSAL_GAS_CONSTANT / pressure
}

def temperature_of_gas_system(moles: Double, volume: Double, pressure: Double): Double = {
  if (((moles < BigInt(0).toDouble || volume < BigInt(0).toDouble).asInstanceOf[Boolean] || pressure < BigInt(0).toDouble).asInstanceOf[Boolean]) {
    throw
    "Invalid inputs. Enter positive value."
  }
  return pressure * volume / (moles * UNIVERSAL_GAS_CONSTANT)
}

def moles_of_gas_system(kelvin: Double, volume: Double, pressure: Double): Double = {
  if (((kelvin < BigInt(0).toDouble || volume < BigInt(0).toDouble).asInstanceOf[Boolean] || pressure < BigInt(0).toDouble).asInstanceOf[Boolean]) {
    throw
    "Invalid inputs. Enter positive value."
  }
  return pressure * volume / (kelvin * UNIVERSAL_GAS_CONSTANT)
}

val UNIVERSAL_GAS_CONSTANT: Double = 8.314462

def main(args: Array[String]): Unit = {
  {
    System.gc()
    val _startMem = Runtime.getRuntime.totalMemory() - Runtime.getRuntime.freeMemory()
    val _start = _now()
    println(pressure_of_gas_system(2.0, 100.0, 5.0))
    println(volume_of_gas_system(0.5, 273.0, 0.004))
    println(temperature_of_gas_system(2.0, 100.0, 5.0))
    println(moles_of_gas_system(100.0, 5.0, 10.0))
    val _end = _now()
    System.gc()
    val _endMem = Runtime.getRuntime.totalMemory() - Runtime.getRuntime.freeMemory()
    val _durUs = (_end - _start) / 1000
    var _memDiff = _endMem - _startMem
    if (_memDiff <= 0) _memDiff = _endMem
    println(toJson(scala.collection.immutable.Map("duration_us" -> _durUs, "memory_bytes" -> _memDiff, "name" -> "main")))
  }
}
}
